# GerClaw

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  app.py  docker-compose.dev.yml  docker-compose.yml  docker.sh  requirements-dev.txt  requirements.txt  开发复盘.md  新任务.md
apps/api/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/api/evals/: rag-retrieval-reviewed-v1.json
apps/api/migrations/: README  env.py
apps/api/migrations/versions/: 3b5c9d1e7a42_add_trace_private_input_artifacts.py  85f0a2c6d941_add_clinical_intake_image_inputs.py  8a6d5b012016_add_chat_message_idempotency.py  9c17e2a62016_add_chat_session_fencing.py  a11c814f2042_add_account_model_overrides.py  a21c814f2043_add_medication_review_drafts.py  a31c814f2044_add_medication_review_access_grant.py  a41c814f2045_add_risk_alert_access_grant.py  a62c814f2021_add_runtime_checkpoints.py  a72c814f2021_add_cga_assessments.py  a82c814f2022_add_uploaded_documents.py  a85f0a2c6d942_add_admin_account_audit_roles.py  a92c814f2023_expand_cga_position.py  b02c814f2024_add_cga_supplemental_notes.py  b06c814f2039_add_prescription_drafts.py  b16c814f2040_expand_cga_position_for_mmse.py  b26c814f2041_add_patient_access_grants.py  b51c814f2046_add_medication_review_draft_reviews.py  b93c814f2032_add_provider_egress_events.py  bf1a2d7c2016_bind_chat_fence_to_trace.py  c02c814f2025_add_clinical_intakes.py  c03c814f2033_add_asr_egress_purpose.py  c12d814f2026_add_clinical_intake_document_refs.py  c29c814f2018_add_versioned_skill_registry.py  c36d914f3150_add_prescription_draft_reviews.py  c52c814f2047_add_chronic_care_access_grant.py  c62c814f2048_add_prescription_review_amendments.py  d03c814f2034_add_document_egress_purpose.py  d30c814f2018_harden_skill_ownership_and_storage.py  d42c814f2027_add_risk_alerts.py  d7f403a12017_add_evidenced_memory_facts.py  e04c814f2035_add_model_prompt_egress_purpose.py  e31c814f2019_bind_skill_selection_principal.py  e41b8c2a2017_add_memory_fact_revisions.py  e52c814f2028_allow_chat_risk_alerts.py  f04c814f2036_add_account_deactivation_audit.py  f196f3600b8c_create_hardened_observability_schema.py  f51c814f2020_add_runtime_approvals.py  f62c814f2029_add_chronic_care_ledger.py  f72c814f2030_add_account_credentials.py  (+3 more)
apps/api/scripts/: perf_medication_review_workflow.py  perf_sse_safety_short_circuit.py
apps/api/src/gerclaw_api/: __init__.py  admin_bootstrap.py  application.py  auth.py  config.py  context.py  dependencies.py  encryption.py  logging.py  main.py  metrics.py  middleware.py  security.py
apps/api/src/gerclaw_api/api/routes/: __init__.py  approvals.py  auth.py  cga.py  chat.py  chronic_care.py  clinical_intakes.py  consent.py  documents.py  health.py  memory.py  rag.py  risk_alerts.py  search.py  skills.py  traces.py  voice.py
apps/api/src/gerclaw_api/database/: __init__.py  base.py  models.py  session.py
apps/api/src/gerclaw_api/domain/: __init__.py  chat_schemas.py  enums.py  trace_schemas.py
apps/api/src/gerclaw_api/modules/: AGENTS.md  __init__.py  contracts.py
apps/api/src/gerclaw_api/modules/cga/: AGENTS.md  (+8 more)
apps/api/src/gerclaw_api/repositories/: __init__.py  account.py  account_model_override.py  approval.py  cga.py  checkpoint.py  chronic_care.py  clinical_intake.py  consent.py  conversation.py  document.py  medication_review_draft.py  memory.py  prescription_draft.py  provider_egress.py  risk_alert.py  skill.py  trace.py
apps/api/src/gerclaw_api/services/: __init__.py  account_model_configuration.py  approval_service.py  cga_service.py  chat_cancellation.py  chat_service.py  chronic_care_service.py  clinical_intake_service.py  conversation_service.py  health_service.py  model_egress_audit.py  model_factory.py  model_router.py  rate_limit.py  session_lease.py  trace_service.py
apps/api/tests/: __init__.py  conftest.py  test_account_model_configuration.py  test_account_security_audit.py  test_agent_harness.py  test_agent_harness_contract.py  test_agent_harness_safety.py  test_api_integration.py  test_approval_integration.py  test_approval_repository.py  test_approval_service.py  test_auth.py  test_cga_minicog.py  test_cga_mmse.py  test_cga_phq9.py  test_cga_psqi.py  test_cga_sas.py  test_cga_service.py  test_chat_cancellation.py  test_chat_integration.py  test_chat_route.py  test_chat_service.py  test_chat_turn_coordinator.py  test_chronic_care_service.py  test_clinical_intake_route_contract.py  test_clinical_intake_service.py  test_command_and_egress_boundaries.py  test_config.py  test_consent_module.py  test_conversation_service.py  test_document_egress_route.py  test_document_service.py  test_encryption.py  test_evals_module.py  test_health_service.py  test_identity_passwords.py  test_image_input.py  test_io_tool_contracts.py  test_logging_and_context.py  test_medication_reconciliation.py  (+43 more)
(+1049 files in other folders)
